<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/WelcomeALC4"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aboutbtn"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="70dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/ABOUT_ALC"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/myprofilebtn"
        app:layout_constraintEnd_toEndOf="@+id/welcometext"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometext" />

    <Button
        android:id="@+id/myprofilebtn"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="311dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/MY_PROFILE"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/aboutbtn"
        app:layout_constraintTop_toBottomOf="@+id/aboutbtn"
        app:layout_constraintVertical_bias="0.46" />

</android.support.constraint.ConstraintLayout>